Estandarizacion en gestion de ayudas

--- a/WebContent/views/desktop/gestion/ayudas/estudioSocioEconomico/selectEvaluador.zul
+++ b/WebContent/views/desktop/gestion/ayudas/estudioSocioEconomico/selectEvaluador.zul
@@ -3,144 +3,158 @@
 		<div class="row">
 			<div class="col s12" align="center"
 				style="margin-bottom: 15px;">
-				<label value="Seleccione el Evaluador del Estudio Socio Economico"
+				<label
+					value="Seleccione el Evaluador del Estudio Socio Economico"
 					sclass="label-medium-500">
 				</label>
 			</div>
 
 		</div>
 		<div width="100%">
+			<div class="row">
+				<n:label class="active">DATOS DE LA SOLICITUD:</n:label>
+				<div sclass="row">
+					<div sclass="col s6">
+						<div class="input-field col s12">
+							<n:label for="beneficiario1"
+								class="active">
+								Beneficiario:
+							</n:label>
+							<textbox disabled="true"
+								value="@bind(vm.solicitudAyuda.fkBeneficiario.fkPersona.identificacion.concat(' - ').concat(vm.solicitudAyuda.fkBeneficiario.fkPersona.nombre).concat(' ').concat(vm.solicitudAyuda.fkBeneficiario.fkPersona.apellido))">
+							</textbox>
 
-			<div style="overflow: auto;" class="row">
-			<div class="col s12">
-			
+						</div>
+
+					</div>
+					<div sclass="col s6"
+						visible="@load(not empty vm.solicitudAyuda.fkBeneficiario.fkPersona.nombre )">
+						<div class="input-fieldcol s12">
+							<n:label for="beneficiario1"
+								class="active">
+								Representante del Beneficiario:
+							</n:label>
+							<textbox disabled="true" id="beneficiario1"
+								value="@bind(vm.solicitudAyuda.fkBeneficiario.fkFamiliar.fkPersona.identificacion.concat(' - ').concat(vm.solicitudAyuda.fkBeneficiario.fkFamiliar.fkPersona.nombre).concat(' ').concat(vm.solicitudAyuda.fkBeneficiario.fkFamiliar.fkPersona.apellido))">
+							</textbox>
+						</div>
+
+					</div>
+				</div>
+				<div sclass="row">
+					<div class="col s6">
+						<div class="input-field  col s12">
+							<n:label for="beneficiario3"
+								class="active">
+								Ayuda
+							</n:label>
+							<textbox disabled="true" id="beneficiario3"
+								value="@bind(vm.solicitudAyuda.fkAyuda.nombre)">
+							</textbox>
+						</div>
+					</div>
+					<div sclass="col s6"
+						visible="@load(not empty vm.solicitudAyuda.fkAyuda.nombre )">
+						<div class="input-field col s12">
+							<n:label for="beneficiario3"
+								class="active">
+								Descripción de Ayuda:
+							</n:label>
+							<textbox sclass="materialize-textarea"
+								disabled="true" multiline="true"
+								value="@bind(vm.solicitudAyuda.fkAyuda.descripcion)">
+							</textbox>
+						</div>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col s6">
+						<div class="input-field  col s12">
+							<n:label for="titulo" class="active">
+								Titulo de Solicitud
+							</n:label>
+							<textbox id="titulo" type="text"
+								disabled="true" maxlength="100"
+								value="@bind(vm.solicitudAyuda.titulo)">
+							</textbox>
+						</div>
+					</div>
+					<div class="col s6">
+						<div class="input-field  col s12">
+							<n:label for="urgencia" class="active">
+								Urgencia
+							</n:label>
+							<textbox id="urgencia" type="text"
+								disabled="true" maxlength="100"
+								value="@bind(vm.solicitudAyuda.urgenciaEnum)">
+							</textbox>
+						</div>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col s6">
+						<div class="input-field col s12">
+							<n:label for="fecha_solicitud"
+								class="active">
+								Fecha de Solicitud
+							</n:label>
+
+							<datebox id="fecha_solicitud" cols="20"
+								disabled="true" format="dd/MM/yyyy" readonly="true"
+								value="@bind(vm.solicitudAyuda.fecha)" />
+						</div>
+					</div>
+
+				</div>
+				<div sclass="row">
+					<div class="col s12">
+						<div class="input-field  col s12">
+							<n:label for="observacion" class="active">
+								Observación
+							</n:label>
+							<textbox type="text" disabled="true"
+								sclass="materialize-textarea" multiline="true"
+								value="@bind(vm.solicitudAyuda.observacion)">
+							</textbox>
+						</div>
+					</div>
+				</div>
+			</div>
 			<div class="row">
 
-					<div class="input-field col s12">
-					
-					<n:label for="beneficiario3" class="active">
-						Titulo Solicitud Ayuda:
-					</n:label>
-					<label sclass="subtitulo-evento" value="@bind(vm.solicitudAyuda.titulo)"> </label>
-					
-					</div>
 
-				</div>
-				
-				<div class="row">
+				<div class="col s12">
+					<listbox id="listbox" model="@load(vm.trabajadores)"
+						height="200px"
+						selectedItem="@bind(vm.estudioSocioEconomico.fkTrabajador)">
 
-					<div class="input-field col s12">
-						<n:label for="beneficiario_solicitud" class="active">
-						Nombre Beneficiario Solicitud Ayuda:
-					</n:label>
-					
-					<label sclass="subtitulo-evento" value="@bind(vm.solicitudAyuda.fkBeneficiario.fkPersona.nombre.concat(' ').concat(vm.solicitudAyuda.fkBeneficiario.fkPersona.apellido))"> </label>
-					
-					</div>
+						<listhead sizable="true">
+							<listheader width="10%"
+								label="Identificación" />
+							<listheader width="20%" label="Trabajador" />
+							<listheader width="20%" label="Dirección" />
+							<listheader width="20%" label="Correo" />
+							<listheader width="40%" label="Teléfono" />
+						</listhead>
+						<template name="model">
+							<listitem>
+								<listcell
+									label="@load(each.fkPersona.identificacion)" />
+								<listcell
+									label="@load(each.fkPersona.nombre.concat(' ').concat(each.fkPersona.apellido))" />
 
-				</div>
-				
-				
-				<div class="row">
+								<listcell
+									label="@load(each.fkPersona.direccion)" />
+								<listcell
+									label="@load(each.fkPersona.correo)" />
+								<listcell
+									label="@load(each.fkPersona.telefono1)" />
 
-					<div class="input-field col s12">
-						<n:label for="beneficiario3_solicitud" class="active">
-						Documento de Identificacion Beneficiario Solicitud Ayuda:
-					</n:label>
-					
-					<label sclass="subtitulo-evento" value="@bind(vm.solicitudAyuda.fkBeneficiario.fkPersona.identificacion)"> </label>
-					
-					
-					</div>
-
-				</div>
-				
-				
-				<div class="row">
-
-					<div class="input-field col s12">
-						<n:label for="familiar_solicitud" class="active">
-						Nombre Familiar Solicitud Ayuda:
-					</n:label>
-					<label sclass="subtitulo-evento" value="@bind(vm.solicitudAyuda.fkBeneficiario.fkFamiliar.fkPersona.nombre.concat(' ').concat(vm.solicitudAyuda.fkBeneficiario.fkFamiliar.fkPersona.apellido))"> </label>
-					
-					
-					</div>
-
-				</div>
-				
-				
-				
-				<div class="row">
-
-					<div class="input-field col s12">
-						<n:label for="familiar3_solicitud" class="active">
-						Documento de Identificacion Familiar Solicitud Ayuda:
-					</n:label>
-					<label sclass="subtitulo-evento" value="@bind(vm.solicitudAyuda.fkBeneficiario.fkFamiliar.fkPersona.identificacion)"> </label>
-					
-					
-					</div>
-
-				</div>
-				
-				<div class="row">
-
-					<div class="input-field col s12">
-						<n:label for="ayuda_solicitud" class="active">
-						Ayuda Solicitada:
-					</n:label>
-					<label sclass="subtitulo-evento" value="@bind(vm.solicitudAyuda.fkAyuda.nombre)"> </label>
-					
-					
-					</div>
-
-				</div>
-				
-				<div class="row">
-
-					<div class="input-field col s12">
-						<n:label for="ayuda2_solicitud" class="active">
-						Urgencia Solicitud:
-					</n:label>
-					<label sclass="subtitulo-evento" value="@bind(vm.solicitudAyuda.urgenciaEnum)"> </label>
-					
-					</div>
-
-				</div>
-				
-			
-				<div class="col s12" style="overflow: scroll;">
-						<listbox id="listbox"
-							model="@load(vm.trabajadores)"
-							selectedItem="@bind(vm.estudioSocioEconomico.fkTrabajador)">
-
-							<listhead sizable="true">
-								<listheader width="200px" label="Nombre" />
-							<listheader width="200px" label="Identificacion" />
-							<listheader width="200px" label="Direccion" />
-							<listheader width="200px" label="Correo" />
-							<listheader width="200px" label="Telefono" />
-							</listhead>
-							<template name="model">
-								<listitem>
-									<listcell label="@load(each.fkPersona.nombre)" />
-									<listcell label="@load(each.fkPersona.nombre.concat(' ').concat(each.fkPersona.apellido))" />
-									
-									<listcell label="@load(each.fkPersona.identificacion)" />
-									<listcell label="@load(each.fkPersona.direccion)" />
-									<listcell label="@load(each.fkPersona.correo)" />
-									<listcell label="@load(each.fkPersona.telefono1)" />
-									
-								</listitem>
-							</template>
-							<listfoot>
-								<listfooter id="listFoot" span="5"
-									use="karen.core.listfoot.ListFoot">
-								</listfooter>
-							</listfoot>
-						</listbox>
-					</div>
+							</listitem>
+						</template>
+					</listbox>
 				</div>
 			</div>
 		</div>
