--- a/WebContent/views/desktop/gestion/ayudas/familiarYBeneficiario/FamiliarYBeneficiarioIndex.zul
+++ b/WebContent/views/desktop/gestion/ayudas/familiarYBeneficiario/FamiliarYBeneficiarioIndex.zul
@@ -1,48 +1,37 @@
- <?xel-method prefix="m" name="convertirLongATimestamp" class="lights.smile.util.UtilConverterDataList" 
-	signature="java.lang.String convertirLongATimestamp(java.lang.Long)" ?> 
+<?xel-method prefix="m" name="convertirLongATimestamp" class="lights.smile.util.UtilConverterDataList" 
+	signature="java.lang.String convertirLongATimestamp(java.lang.Long)" ?>
 <zk xmlns:n="native" xmlns:w="client">
 	<div width="100%" class="${arg.animation_}"
 		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
 		apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('vm') @init('ve.smile.gestion.ayudas.familiar_y_beneficiario.VM_FamiliarYBeneficiarioIndex')">
-
-		<div sclass="animated fadeInLeft">
-		<div class="row">
-			<div class="col s12" align="center"
-				style="margin-bottom: 15px;">
-				<label value="Seleccione el Representante"
-					sclass="label-medium-500">
-				</label>
-			</div>
-
-		</div>
 		<div width="100%">
-
 			<div style="overflow: auto;" class="row">
-			<div class="col s12">
-				<div class="col s12" style="overflow: scroll;">
+				<div class="col s12">
+					<div class="col s12">
 						<listbox id="listbox"
 							model="@load(vm.objectsList)"
 							selectedItem="@bind(vm.selectedObject)">
-
-
-							<listhead sizable="true">
-					
-							<listheader width="250px" label="Nombre de Representante" />
-							<listheader width="250px" label="Identificacion" />
-							<listheader width="250px" label="Telefono" />
-							<listheader width="250px" label="Correo" />
-							
-						
+							<listhead>
+								<listheader width="10%"
+									label="Identificación" />
+								<listheader width="30%"
+									label="Representante" />
+								<listheader width="30%"
+									label="Teléfono" />
+								<listheader width="30%" label="Correo" />
 							</listhead>
 							<template name="model">
 								<listitem>
-								
-								<listcell label="@load(each.fkPersona.nombre.concat(' ').concat(each.fkPersona.apellido))" />
-								<listcell label="@load(each.fkPersona.identificacion)" />
-								<listcell label="@load(each.fkPersona.telefono1)" />
-								<listcell label="@load(each.fkPersona.correo)" />
-									
+									<listcell
+										label="@load(each.fkPersona.identificacion)" />
+									<listcell
+										label="@load(each.fkPersona.nombre.concat(' ').concat(each.fkPersona.apellido))" />
+
+									<listcell
+										label="@load(each.fkPersona.telefono1)" />
+									<listcell
+										label="@load(each.fkPersona.correo)" />
 								</listitem>
 							</template>
 							<listfoot>
@@ -55,8 +44,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
-
 		<toolbar id="toolbar" align="center"
 			use="karen.core.toolbar.Toolbar">
 		</toolbar>
